bjs2_85538 Добавил константу вместо маг числа, и поменял проверку на name.isBlank вынес ваидацию в отдельные методы